--- a/.gitattributes
+++ b/.gitattributes
@@ -6,11 +6,14 @@
 /.editorconfig                  export-ignore
 /.gitattributes                 export-ignore
 /.gitignore                     export-ignore
-/.php_cs                        export-ignore
+/.php-cs-fixer.php              export-ignore
+/.yamllint.yaml                 export-ignore
 /composer-require-checker.json  export-ignore
+/composer.lock                  export-ignore
 /infection.json                 export-ignore
 /Makefile                       export-ignore
 /phpstan-baseline.neon          export-ignore
 /phpstan.neon                   export-ignore
 /psalm-baseline.xml             export-ignore
 /psalm.xml                      export-ignore
+/rector.php                     export-ignore
