--- a/composer.json
+++ b/composer.json
@@ -47,6 +47,7 @@
     "phpunit/phpunit": "^9.5.27",
     "psalm/plugin-phpunit": "~0.18.4",
     "ramsey/uuid": "^4.7.0",
+    "rector/rector": "~0.15.1",
     "symfony/cache": "^5.3.14",
     "vimeo/psalm": "^5.4.0"
   },
