--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
   },
   "require": {
     "php": "~8.0.0 || ~8.1.0 || ~8.2.0",
-    "doctrine/annotations": "^1.10.3",
+    "doctrine/annotations": "^1.10.3 || ^2.0.0",
     "doctrine/collections": "^1.6.5 || ^2.0.0",
     "doctrine/dbal": "^2.12.0 || ^3.0.0",
     "doctrine/orm": "^2.8.0",
