Enhancement: Synchronize with ergebnis/php-package-template

--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -79,11 +79,13 @@ repository:
   description: ":robot: Provides a fixture factory for doctrine/orm entities."
   enable_automated_security_fixes: true
   enable_vulnerability_alerts: true
+  has_discussions: false
   has_downloads: true
   has_issues: true
   has_pages: false
   has_projects: false
   has_wiki: false
+  is_template: false
   name: "factory-bot"
   private: false
 
