Fix: Adjust configuration for ergebnis/phpstan-rules

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -8,14 +8,15 @@ parameters:
 		objectManagerLoader: config/object-manager.php
 
 	ergebnis:
-		classesAllowedToBeExtended:
-			- Ergebnis\FactoryBot\Definition\AbstractDefinition
-			- Ergebnis\FactoryBot\Test\Integration\AbstractTestCase
-			- Ergebnis\FactoryBot\Test\Unit\AbstractTestCase
-			- Example\Test\Unit\AbstractTestCase
-			- Faker\Generator
-			- InvalidArgumentException
-			- RuntimeException
+		noExtends:
+			classesAllowedToBeExtended:
+				- Ergebnis\FactoryBot\Definition\AbstractDefinition
+				- Ergebnis\FactoryBot\Test\Integration\AbstractTestCase
+				- Ergebnis\FactoryBot\Test\Unit\AbstractTestCase
+				- Example\Test\Unit\AbstractTestCase
+				- Faker\Generator
+				- InvalidArgumentException
+				- RuntimeException
 	inferPrivatePropertyTypeFromConstructor: true
 
 	level: max
