--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     "source": "https://github.com/ergebnis/factory-bot"
   },
   "require": {
-    "php": "~8.0.0 || ~8.1.0 || ~8.2.0",
+    "php": "~8.1.0 || ~8.2.0",
     "doctrine/annotations": "^1.10.3 || ^2.0.0",
     "doctrine/collections": "^1.6.5 || ^2.0.0",
     "doctrine/dbal": "^2.12.0 || ^3.0.0",
@@ -71,7 +71,7 @@
       "phpstan/extension-installer": true
     },
     "platform": {
-      "php": "8.0.25"
+      "php": "8.1.21"
     },
     "preferred-install": "dist",
     "sort-packages": true
