--- a/.github/workflows/integrate.yaml
+++ b/.github/workflows/integrate.yaml
@@ -14,6 +14,8 @@ jobs:
 
     runs-on: "ubuntu-latest"
 
+    timeout-minutes: 5
+
     strategy:
       matrix:
         php-version:
@@ -72,6 +74,8 @@ jobs:
     name: "Coding Standards"
 
     runs-on: "ubuntu-latest"
+
+    timeout-minutes: 5
 
     strategy:
       matrix:
@@ -146,6 +150,8 @@ jobs:
 
     runs-on: "ubuntu-latest"
 
+    timeout-minutes: 5
+
     strategy:
       matrix:
         php-version:
@@ -200,6 +206,8 @@ jobs:
 
     runs-on: "ubuntu-latest"
 
+    timeout-minutes: 5
+
     strategy:
       matrix:
         php-version:
@@ -249,6 +257,8 @@ jobs:
     name: "Refactoring"
 
     runs-on: "ubuntu-latest"
+
+    timeout-minutes: 5
 
     strategy:
       matrix:
@@ -310,6 +320,8 @@ jobs:
 
     runs-on: "ubuntu-latest"
 
+    timeout-minutes: 5
+
     strategy:
       matrix:
         php-version:
@@ -358,6 +370,8 @@ jobs:
 
     runs-on: "ubuntu-latest"
 
+    timeout-minutes: 5
+
     strategy:
       matrix:
         php-version:
@@ -402,7 +416,7 @@ jobs:
         run: "mkdir -p .build/phpstan/"
 
       - name: "Run phpstan/phpstan"
-        run: "vendor/bin/phpstan --configuration=phpstan.neon --memory-limit=-1"
+        run: "vendor/bin/phpstan --ansi --configuration=phpstan.neon --memory-limit=-1"
 
       - name: "Create cache directory for vimeo/psalm"
         run: "mkdir -p .build/psalm/"
@@ -414,6 +428,8 @@ jobs:
     name: "Tests"
 
     runs-on: "ubuntu-latest"
+
+    timeout-minutes: 5
 
     strategy:
       matrix:
@@ -462,10 +478,10 @@ jobs:
           dependencies: "${{ matrix.dependencies }}"
 
       - name: "Show Doctrine mapping information"
-        run: "vendor/bin/doctrine orm:info"
+        run: "vendor/bin/doctrine orm:info --ansi"
 
       - name: "Validate Doctrine mapping"
-        run: "vendor/bin/doctrine orm:validate-schema --skip-sync"
+        run: "vendor/bin/doctrine orm:validate-schema --ansi --skip-sync"
 
       - name: "Run unit tests with phpunit/phpunit"
         run: "vendor/bin/phpunit --colors=always --configuration=test/phpunit.xml --testsuite=unit"
