--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,7 @@
     "ergebnis/license": "^2.2.0",
     "ergebnis/php-cs-fixer-config": "^6.0.0",
     "ergebnis/phpstan-rules": "^2.1.0",
+    "ergebnis/phpunit-slow-test-detector": "^2.3.0",
     "infection/infection": "~0.27.2",
     "phpstan/extension-installer": "^1.3.1",
     "phpstan/phpstan": "^1.10.34",
