--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
   "homepage": "https://github.com/ergebnis/factory-bot",
   "support": {
     "issues": "https://github.com/ergebnis/factory-bot/issues",
-    "source": "https://github.com/ergebnis/factory-bot"
+    "source": "https://github.com/ergebnis/factory-bot",
+    "security": "https://github.com/ergebnis/factory-bot/blob/main/.github/SECURITY.md"
   },
   "require": {
     "php": "~8.1.0 || ~8.2.0",
