--- a/.github/workflows/integrate.yaml
+++ b/.github/workflows/integrate.yaml
@@ -199,7 +199,7 @@ jobs:
           trust-gpg-keys: "0x033E5F8D801A2F8D"
 
       - name: "Run maglnet/composer-require-checker"
-        run: ".phive/composer-require-checker check --config-file=$(pwd)/composer-require-checker.json"
+        run: ".phive/composer-require-checker check --ansi --config-file=$(pwd)/composer-require-checker.json --verbose"
 
   mutation-tests:
     name: "Mutation Tests"
@@ -276,7 +276,7 @@ jobs:
         uses: "shivammathur/setup-php@2.28.0"
         with:
           coverage: "none"
-          extensions: "none, ctype, curl, dom, intl, json, mbstring, pdo, pdo_sqlite, phar, simplexml, tokenizer, xml, xmlwriter"
+          extensions: "none, ctype, curl, dom, json, mbstring, pdo, pdo_sqlite, phar, simplexml, tokenizer, xml, xmlwriter"
           php-version: "${{ matrix.php-version }}"
 
       - name: "Set up problem matchers for PHP"
