--- a/composer.json
+++ b/composer.json
@@ -76,6 +76,9 @@
     "audit": {
       "abandoned": "report"
     },
+    "platform": {
+      "php": "8.1.26"
+    },
     "preferred-install": "dist",
     "sort-packages": true
   }
