--- a/composer.json
+++ b/composer.json
@@ -50,6 +50,7 @@
     "psalm/plugin-phpunit": "~0.18.4",
     "ramsey/uuid": "^4.7.5",
     "rector/rector": "~0.18.12",
+    "roave/backward-compatibility-check": "^8.4.0",
     "symfony/cache": "^5.3.14",
     "vimeo/psalm": "^5.17.0"
   },
