--- a/.github/workflows/integrate.yaml
+++ b/.github/workflows/integrate.yaml
@@ -40,9 +40,6 @@ jobs:
       - name: "Set up problem matchers for PHP"
         run: "echo \"::add-matcher::${{ runner.tool_cache }}/php.json\""
 
-      - name: "Set up problem matchers for phpunit/phpunit"
-        run: "echo \"::add-matcher::${{ runner.tool_cache }}/phpunit.json\""
-
       - name: "Validate composer.json and composer.lock"
         run: "composer validate --ansi --strict"
 
@@ -182,9 +179,6 @@ jobs:
       - name: "Run ergebnis/composer-normalize"
         run: "composer normalize --ansi --dry-run"
 
-      - name: "Create cache directory for friendsofphp/php-cs-fixer"
-        run: "mkdir -p .build/php-cs-fixer/"
-
       - name: "Cache cache directory for friendsofphp/php-cs-fixer"
         uses: "actions/cache@v4.0.0"
         with:
@@ -195,10 +189,10 @@ jobs:
             php-${{ matrix.php-version }}-php-cs-fixer-
 
       - name: "Run friendsofphp/php-cs-fixer"
-        run: "vendor/bin/php-cs-fixer fix --ansi --config=.php-cs-fixer.php --diff --dry-run --verbose"
+        run: "vendor/bin/php-cs-fixer fix --ansi --config=.php-cs-fixer.php --diff --dry-run --show-progress=dots --verbose"
 
       - name: "Run friendsofphp/php-cs-fixer on fixtures"
-        run: "vendor/bin/php-cs-fixer fix --ansi --config=.php-cs-fixer.fixture.php --diff --dry-run --verbose"
+        run: "vendor/bin/php-cs-fixer fix --ansi --config=.php-cs-fixer.fixture.php --diff --dry-run --show-progress=dots --verbose"
 
   dependency-analysis:
     name: "Dependency Analysis"
@@ -355,9 +349,6 @@ jobs:
         with:
           dependencies: "${{ matrix.dependencies }}"
 
-      - name: "Create cache directory for rector/rector"
-        run: "mkdir -p .build/rector/"
-
       - name: "Cache cache directory for rector/rector"
         uses: "actions/cache@v4.0.0"
         with:
@@ -467,14 +458,8 @@ jobs:
         with:
           dependencies: "${{ matrix.dependencies }}"
 
-      - name: "Create cache directory for phpstan/phpstan"
-        run: "mkdir -p .build/phpstan/"
-
       - name: "Run phpstan/phpstan"
         run: "vendor/bin/phpstan --ansi --configuration=phpstan.neon --memory-limit=-1"
-
-      - name: "Create cache directory for vimeo/psalm"
-        run: "mkdir -p .build/psalm/"
 
       - name: "Run vimeo/psalm"
         run: "vendor/bin/psalm --config=psalm.xml --output-format=github --shepherd --show-info=false --stats --threads=4"
