--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,7 @@
   "require-dev": {
     "ext-pdo_sqlite": "*",
     "ergebnis/composer-normalize": "^2.42.0",
+    "ergebnis/data-provider": "^3.2.0",
     "ergebnis/license": "^2.4.0",
     "ergebnis/php-cs-fixer-config": "^6.26.0",
     "ergebnis/phpstan-rules": "^2.2.0",
