--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -164,6 +164,11 @@ parameters:
 			path: src/FixtureFactory.php
 
 		-
+			message: "#^Method Ergebnis\\\\FactoryBot\\\\FixtureFactory\\:\\:createOne\\(\\) should return T but returns object\\.$#"
+			count: 1
+			path: src/FixtureFactory.php
+
+		-
 			message: "#^Method Ergebnis\\\\FactoryBot\\\\FixtureFactory\\:\\:define\\(\\) has parameter \\$afterCreate with a nullable type declaration\\.$#"
 			count: 1
 			path: src/FixtureFactory.php
@@ -179,18 +184,18 @@ parameters:
 			path: src/FixtureFactory.php
 
 		-
+			message: "#^Parameter \\#1 \\$className of method Doctrine\\\\Instantiator\\\\Instantiator\\:\\:instantiate\\(\\) expects class\\-string\\<object\\>, class\\-string\\<T\\> given\\.$#"
+			count: 2
+			path: src/FixtureFactory.php
+
+		-
 			message: "#^Parameter \\#1 \\$className of method Doctrine\\\\ORM\\\\EntityManagerInterface\\:\\:getClassMetadata\\(\\) expects class\\-string\\<object\\>, class\\-string\\<T\\> given\\.$#"
 			count: 1
 			path: src/FixtureFactory.php
 
 		-
-			message: "#^Parameter \\#1 \\$entity of method Ergebnis\\\\FactoryBot\\\\FixtureFactory\\:\\:setField\\(\\) expects object, T given\\.$#"
-			count: 1
-			path: src/FixtureFactory.php
-
-		-
-			message: "#^Parameter \\#1 \\$object of method Doctrine\\\\Persistence\\\\ObjectManager\\:\\:persist\\(\\) expects object, T given\\.$#"
-			count: 1
+			message: "#^Unable to resolve the template type T in call to method Doctrine\\\\Instantiator\\\\Instantiator\\:\\:instantiate\\(\\)$#"
+			count: 2
 			path: src/FixtureFactory.php
 
 		-
