--- a/composer.json
+++ b/composer.json
@@ -48,12 +48,10 @@
     "phpstan/phpstan-phpunit": "^1.4.0",
     "phpstan/phpstan-strict-rules": "^1.6.1",
     "phpunit/phpunit": "^10.5.26",
-    "psalm/plugin-phpunit": "~0.19.0",
     "ramsey/uuid": "^4.7.6",
     "rector/rector": "^1.2.10",
     "roave/backward-compatibility-check": "^8.6.0",
-    "symfony/cache": "^6.4.8",
-    "vimeo/psalm": "^5.26.1"
+    "symfony/cache": "^6.4.8"
   },
   "autoload": {
     "psr-4": {
