--- a/.github/workflows/renew.yaml
+++ b/.github/workflows/renew.yaml
@@ -32,7 +32,7 @@ jobs:
         uses: "shivammathur/setup-php@2.35.4"
         with:
           coverage: "none"
-          extensions: "none, bcmath, ctype, curl, dom, intl, json, mbstring, pdo, pdo_sqlite, phar, simplexml, tokenizer, xml, xmlwriter"
+          extensions: "none, bcmath, ctype, curl, dom, iconv, intl, json, mbstring, pdo, pdo_sqlite, phar, simplexml, tokenizer, xml, xmlwriter"
           php-version: "${{ matrix.php-version }}"
 
       - name: "Set up problem matchers for PHP"
