--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
     "security": "https://github.com/ergebnis/factory-bot/blob/main/.github/SECURITY.md"
   },
   "require": {
-    "php": "~8.1.0 || ~8.2.0 || ~8.3.0 || ~8.4.0",
+    "php": "~8.1.0 || ~8.2.0 || ~8.3.0 || ~8.4.0 || ~8.5.0",
     "doctrine/collections": "^1.6.5 || ^2.0.0",
     "doctrine/dbal": "^2.12.0 || ^3.0.0 || ^4.0.0",
     "doctrine/instantiator": "^1.0.0 || ^2.0.0",
